remove the last item bottom padding of process list to avoid extra space for next section header

--- a/sass/_uswds-theme-custom-styles.scss
+++ b/sass/_uswds-theme-custom-styles.scss
@@ -113,7 +113,12 @@ i.e.
    border-color: #dfe1e2;
 }
 
+// remove process list's the last list itme bottom padding to avoid extra top space for the next section header
+ .usa-process-list__item:last-child {
+   padding-bottom: 0;
+ }
+
 .usa-process-list__item p strong {
    font-size: 1.2em; 
-   
 } 
+
